--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "fomantic-ui": "^2.7.8"
+    "fomantic-ui": "^2.7.8",
+    "lodash.update": "^4.10.2"
   }
 }
